syntax = "proto3";

option go_package = "dfs/contract/contract";

package contract;

service DFS {

    rpc StoreFile(stream StoreRequest) returns (MetaData) {}

    rpc FetchFile(MetaData) returns (stream FetchResponse) {}

    rpc ListFiles(MetaData) returns (ListResponse) {}

    rpc GetFileStat(MetaData) returns (MetaData) {}

    rpc LockFile(MetaData) returns (MetaData) {}

    rpc CallbackList(MetaData) returns (ListResponse) {}

    rpc DeleteFile(MetaData) returns (MetaData) {}
}

message MetaData {
    string name = 1;
    int32 size = 2;
    int32 mtime = 3;
    string lockOwner = 4;
    uint32 crc = 5;
}

message StoreRequest {
    oneof requestData {
        MetaData metadata = 1;
        bytes content = 2;
    }
}

message FetchResponse {
    oneof responseData {
        MetaData metadata = 1;
        bytes content = 2;
    }
}

message ListResponse {
    repeated MetaData fileList = 1;
}
